Add 'Add to/Remove from favorites' and Ratings elements. Also added Descendant, Ascendant buttons and functionality for them

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -8,9 +8,12 @@
         src="{{product.img}}"
         alt="product.Title"
       >
+      <button>Add to favorites</button>
+      <button>Remove from favorites</button>
       <h2>{{product.Title}}</h2>
       <p>{{product.Description}}</p>
       <a href="{{product.Url}}">Go to product page</a>
+      <p>Rating: {{product.Rating}}</p>
     </li>
   </ul>
 </div>
