--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,28 @@
 * {
   box-sizing: border-box;
 }
+
+.search {
+  display: inline-block;
+}
+
+.btn {
+  background-color: transparent;
+  border: 3px solid #0fce0f;
+  padding: .5% .8%;
+  transform: translateX(150px);
+  cursor: pointer;
+}
+
+.btn--remove {
+  border-color: #ff0000;
+}
+
+.rating {
+  display: inline-block;
+  color: #286d28;
+  border-radius: 100%;
+  border: 2px solid #0fce0f;
+  padding: .5%;
+  transform: translateX(300px);
+}
