Add BEM methodology

--- a/src/app/components/product-list-item/product-list-item.component.html
+++ b/src/app/components/product-list-item/product-list-item.component.html
@@ -3,6 +3,7 @@
   class="product"
 >
   <img
+    class="product__img"
     src="{{product.img}}"
     alt="product.Title"
   >
@@ -19,5 +20,5 @@
   <h2>{{product.Title}}</h2>
   <p>{{product.Description}}</p>
   <a href="{{product.Url}}">Go to product page</a>
-  <p class="rating">Rating: {{product.Rating}}</p>
+  <p class="product__rating">Rating: {{product.Rating}}</p>
 </li>
