--- a/src/app/components/product-list-item/product-list-item.component.scss
+++ b/src/app/components/product-list-item/product-list-item.component.scss
@@ -1,14 +1,18 @@
-.product-list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
 .product {
   border-bottom: 1px solid #DEDEDE;
   padding: 10px 20px;
+}
 
-  img {
-    max-width: 200px;
-    max-height:200px;
-  }
+.product__img {
+  max-width: 200px;
+  max-height:200px;
+}
+
+.product__rating {
+  display: inline-block;
+  color: #286d28;
+  border-radius: 100%;
+  border: 2px solid #0fce0f;
+  padding: .5%;
+  transform: translateX(300px);
 }
