Change search() parameter from HTMLInputElement to string

--- a/src/app/components/products-main/products-main.component.html
+++ b/src/app/components/products-main/products-main.component.html
@@ -2,8 +2,7 @@
   <div class="search">
     <input
       type="text"
-      #searchInput
-      (input)="search(searchInput)"
+      (input)="search($event.target.value)"
     >
   </div>
   <button class="btn" (click)="setListOrder(true)">\/</button>
