--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,32 +1,12 @@
 <ul class="product-list">
-  <!-- Favorites -->
-  <app-product-list-item [products]=favorites></app-product-list-item>
+  <app-product-list-item
+    [products]=favorites
+    [favorites]=favorites
+    (updateFavorites)="emitFavoritesList($event)">
+  </app-product-list-item>
 
-  <!-- FilteredProducts -->
-  <app-product-list-item [products]=products></app-product-list-item>
-
-
-  <!-- <li
-    *ngFor="let product of products"
-    class="product"
-  >
-    <img
-      src="{{product.img}}"
-      alt="product.Title"
-    >
-    <button
-      class="btn"
-      *ngIf="isFavorite(product); else elseRemoveButton"
-      (click)="addFavoriteProduct(product)"
-    >
-      Add to favorites
-    </button>
-    <ng-template #elseRemoveButton>
-      <button class="btn btn--remove" (click)="removeFavoriteProduct(product)">Remove from favorites</button>
-    </ng-template>
-    <h2>{{product.Title}}</h2>
-    <p>{{product.Description}}</p>
-    <a href="{{product.Url}}">Go to product page</a>
-    <p class="rating">Rating: {{product.Rating}}</p>
-  </li> -->
+  <app-product-list-item
+    [products]=products
+    (updateFavorites)="emitFavoritesList($event)">
+  </app-product-list-item>
 </ul>
