--- a/src/app/components/products-main/products-main.component.html
+++ b/src/app/components/products-main/products-main.component.html
@@ -10,7 +10,7 @@
   <app-product-list
     [favorites]=favorites
     [products]=filteredProducts
-    (updateFavorites)="updateFavoritesList($event)"
+    (updateFavorites)="updateFavoritesAndProducts($event)"
   >
   </app-product-list>
 </div>
