--- a/src/app/components/products-main/products-main.component.html
+++ b/src/app/components/products-main/products-main.component.html
@@ -7,10 +7,5 @@
   </div>
   <button class="btn" (click)="setListOrder(true)">\/</button>
   <button class="btn" (click)="setListOrder(false)">/\</button>
-  <app-product-list
-    [favorites]=favorites
-    [products]=filteredProducts
-    (updateFavorites)="updateFavoritesAndProducts($event)"
-  >
-  </app-product-list>
+  <app-product-list></app-product-list>
 </div>
